--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -17,6 +17,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 * https://repo1.maven.org/maven2/org/clojure/clojure/1.9.0-alpha16/clojure-1.9.0-alpha16.zip[Clojure 1.9.0-alpha16]
 * https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.9.0*[Clojure 1.9 pre-release builds]
+* <<devchangelog#,Dev changelog>>
 * Requirements: Java 1.6, 1.7, or 1.8
 
 == Clojure Source
