--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -77,6 +77,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://www.datacraft.sg/[Datacraft]
 * http://www.datasnap.io/[DataSnap.io]
 * http://www.datomic.com/[Datomic]
+* https://www.deep-impact.ch/[Deep Impact AG]
 * http://degree9.io/[Degree9]
 * http://democracy.works/[Democracy Works]
 * http://www.designed.ly/[Designedly]
