--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -37,6 +37,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://BearyInnovative.com[BearyInnovative]
 * http://bevuta.com/[bevuta]
 * https://billfront.com/[BillFront]
+* https://www.bookwell.com.au/[BookWell]
 * https://www.braintreepayments.com/[Braintree Payments] (acquired by PayPal)
 * http://www.breezeehr.com/[Breeze EHR]
 * http://brickalloy.com/[BrickAlloy]
@@ -126,6 +127,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://labs.ig.com/[IG]
 * https://immute.co/[Immute]
 * http://innoq.com[InnoQ]
+* https://instadeq.com/[instadeq]
 * http://www.intentmedia.com/[Intent Media]
 * http://www.interware.com.mx/[InterWare] - http://caudal.io/[Caudal]
 * http://www.intuit.com[Intuit]
@@ -220,6 +222,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://shore.li/[shore.li]
 * http://www.signafire.com[Signafire]
 * http://signal.uk.com/[Signal]
+* http://docs.svbplatform.com/[Silicon Valley Bank]
 * http://silverline.mobi/[Silverline Mobile]
 * http://www.silverpond.com.au/[Silverpond]
 * https://www.simple.com/[Simple]
@@ -239,6 +242,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://structureddynamics.com/[Structured Dynamics]
 * http://www.studyflow.nl[Studyflow]
 * https://www.style.com[Style.com]
+* http://about.stylitics.com/[Stylitics]
 * http://www.suprematic.net/[Suprematic]
 * http://swirrl.com/[Swirrl]
 * http://www.tappcommerce.com/[Tapp Commerce]
