--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -123,15 +123,16 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://hexawise.com/[Hexawise]
 * https://homescreen.is/[#Homescreen]
 * http://www.ib5k.com/[IB5k]
-* https://indabamusic.com[Indaba Music]
 * http://labs.ig.com/[IG]
 * https://immute.co/[Immute]
+* https://indabamusic.com[Indaba Music]
 * http://innoq.com[InnoQ]
 * https://instadeq.com/[instadeq]
 * http://www.intentmedia.com/[Intent Media]
 * http://www.interware.com.mx/[InterWare] - http://caudal.io/[Caudal]
 * http://www.intuit.com[Intuit]
 * http://www.iplantcollaborative.org/[iPlant Collaborative]
+* http://iris.tv/[IRIS.TV]
 * https://www.jcrew.com/[J.Crew]
 * http://juxt.pro[JUXT]
 * https://kirasystems.com/[Kira Inc]
@@ -182,6 +183,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://otto.de[Otto]
 * http://ourhub.dk[OurHub]
 * http://www.outpace.com/[Outpace]
+* http://corp.outpostgames.com/[Outpost Games]
 * http://owsy.com[Owsy]
 * http://paddleguru.com[PaddleGuru]
 * http://www.bdpanacea.com/[Panacea Systems]
