--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -175,6 +175,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.nubank.com.br/[Nubank]
 * https://nukomeet.com/[Nukomeet]
 * http://numerical.co.nz/[Numerical Brass Computing]
+* http://www.omnyway.com/[Omnyway Inc]
 * https://ona.io[Ona]
 * https://opencompany.com/[OpenCompany]
 * http://OpenSensors.io[OpenSensors.io]
