--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -38,6 +38,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://bevuta.com/[bevuta]
 * https://billfront.com/[BillFront]
 * https://www.bookwell.com.au/[BookWell]
+* https://boundlessgeo.com/[Boundless Geo]
 * https://www.braintreepayments.com/[Braintree Payments] (acquired by PayPal)
 * http://www.breezeehr.com/[Breeze EHR]
 * http://brickalloy.com/[BrickAlloy]
