--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -14,6 +14,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://www.adaptly.com/[Adaptly]
 * http://www.adgoji.com/[AdGoji]
 * https://www.adstage.io/[AdStage]
+* http://www.advanceautoparts.com/[Advance Auto Parts]
 * http://adzerk.com/[Adzerk]
 * http://www.onthemarket.com/[Agents' Mutual]
 * http://www.airloyal.com[Airloyal]
