--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -22,6 +22,11 @@ Jul 25, 2016
 by Dmitri Sotnikov +
 Jul 17, 2016
 
+| image::http://ecx.images-amazon.com/images/I/51EwRiXh4ZL._SL160.jpg[Learning ClojureScript, link="http://a.co/2X3MJn2"]
+| http://a.co/2X3MJn2[Learning ClojureScript] +
+by W. David Jarvis, Rafik Naccache, Allen Rohner +
+Jun 30, 2016
+
 | image::http://ecx.images-amazon.com/images/I/51iq-PKIZ8L._SL160.jpg[Professional Clojure, link="https://amzn.com/1119267277"]
 | https://amzn.com/1119267277[Professional Clojure] +
 by Jeremy Anderson, Michael Gaare, Justin Holguín, Nick Bailey, and Timothy Pratley +
